add_library( tar_benchmark STATIC tar_benchmark.cpp )
target_link_libraries( tar_benchmark ${Boost_LIBRARIES} )
add_executable( sequential sequential.cpp )
target_link_libraries( sequential ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( cmb cmb.cpp )
target_link_libraries( cmb ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( bdev bdev.cpp )
target_link_libraries( bdev ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( bdev_write_blobs bdev_write_blobs.cpp )
target_link_libraries( bdev_write_blobs tar_benchmark ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( bdev_read_blobs bdev_read_blobs.cpp )
target_link_libraries( bdev_read_blobs tar_benchmark ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( blobfs_write_files blobfs_write_files.cpp )
target_link_libraries( blobfs_write_files tar_benchmark ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( bdev_benchmark bdev_benchmark.cpp )
target_link_libraries( bdev_benchmark ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( bdev_benchmark_sync bdev_benchmark_sync.cpp )
target_link_libraries( bdev_benchmark_sync ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( blobfs_read_files blobfs_read_files.cpp )
target_link_libraries( blobfs_read_files tar_benchmark ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( sequential_write sequential_write.cpp )
target_link_libraries( sequential_write ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( blob blob.cpp )
target_link_libraries( blob ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( blobfs blobfs.cpp )
target_link_libraries( blobfs ${Boost_LIBRARIES} ${SPDK_LIBRARIES} )
add_executable( aio_write_files aio_write_files.cpp )
target_link_libraries( aio_write_files tar_benchmark ${Boost_LIBRARIES} ${LIBRT_LIBRARIES} )
add_executable( aio_read_files aio_read_files.cpp )
target_link_libraries( aio_read_files tar_benchmark ${Boost_LIBRARIES} ${LIBRT_LIBRARIES} )
add_executable( linuxaio_read_files linuxaio_read_files.cpp )
target_link_libraries( linuxaio_read_files tar_benchmark ${Boost_LIBRARIES} ${LIBRT_LIBRARIES} ${LIBAIO_LIBRARIES} )
add_executable( linuxaio_write_files linuxaio_write_files.cpp )
target_link_libraries( linuxaio_write_files tar_benchmark ${Boost_LIBRARIES} ${LIBRT_LIBRARIES} ${LIBAIO_LIBRARIES} )
add_executable( io_benchmark_sync io_benchmark_sync.cpp )
target_link_libraries( io_benchmark_sync ${Boost_LIBRARIES} )
add_executable( io_benchmark io_benchmark.cpp )
target_link_libraries( io_benchmark ${Boost_LIBRARIES} ${LIBRT_LIBRARIES} ${LIBAIO_LIBRARIES} )
